--- a/lesson_02/news.html
+++ b/lesson_02/news.html
@@ -19,7 +19,7 @@
 						<div>
 							<h4>Епл почала продавати "новий" айфон</h4>
 							<img src="img/apple.jpeg" alt="Зображення нового айфону"
-								alt="Зображення нового айфону">
+								title="Зображення нового айфону">
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam optio
 								quis tenetur dignissimos provident. Deserunt cum iusto laboriosam
@@ -32,7 +32,7 @@
 					<a href="#">
 						<div>
 							<h4>Настала дата з "чогось там" як вже 200 років</h4>
-							<img src="img/two thousand.jpg"
+							<img src="img/two_thousand.jpg"
 								alt="Відображення кількості років у зображенні"
 								title="Відображення кількості років у зображенні">
 							<p>
