--- a/lesson_02/news.html
+++ b/lesson_02/news.html
@@ -17,9 +17,9 @@
 				<li>
 					<a href="#">
 						<div>
-							<h4>Епл почала продавати "новий" айфон</h4>
+							<h2>Епл почала продавати "новий" айфон</h2>
 							<img src="img/apple.jpeg" alt="Зображення нового айфону"
-								title="Зображення нового айфону">
+								title="Зображено новий айфон">
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam optio
 								quis tenetur dignissimos provident. Deserunt cum iusto laboriosam
@@ -31,10 +31,10 @@
 				<li>
 					<a href="#">
 						<div>
-							<h4>Настала дата з "чогось там" як вже 200 років</h4>
+							<h2>Настала дата з "чогось там" як вже 200 років</h2>
 							<img src="img/two_thousand.jpg"
-								alt="Відображення кількості років у зображенні"
-								title="Відображення кількості років у зображенні">
+								alt="Відображення кількості років в зображенні"
+								title="Кількості років в зображенні">
 							<p>
 								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam optio
 								quis tenetur dignissimos provident. Deserunt cum iusto laboriosam
