--- a/lesson_03/index.html
+++ b/lesson_03/index.html
@@ -300,8 +300,10 @@
 		</main>
 
 		<footer>
-			<span class="footer-text">
+			<span class="footer-text color-tomato">
 				Я футер
+				<p>Але коли ми навчимось стилізувати макет, то я буду виглядати набагато
+					краще. Як і весь макет</p>
 			</span>
 		</footer>
 	</body>
