--- a/lesson_05/index.html
+++ b/lesson_05/index.html
@@ -198,7 +198,7 @@
 					<div class="card">
 						<img src="img/planet-earth.png"
 							alt="Іконка на якій зображено планету Земля">
-						<h3>global delivery</h3>
+						<h3 class="subtitle">global delivery</h3>
 						<p>
 							Experience Hassle-Free Shipping and Seamless Global Connectivity with Our
 							Trustworthy and Efficient Delivery Service, Bringing the World to Your
@@ -208,7 +208,7 @@
 					<div class="card">
 						<img src="img/package-box.png"
 							alt="Іконка на якій зображено запаковану коробку">
-						<h3>free shipping</h3>
+						<h3 class="subtitle">free shipping</h3>
 						<p>
 							Shop to Your Heart's Content Without Worrying About Shipping Costs: Our
 							Free Shipping Service Delivers Your Purchases with a Smile, Straight to
@@ -217,14 +217,14 @@
 					</div>
 					<div class="card">
 						<img src="img/phone.png" alt="Іконка на якій зображено телефон">
-						<h3>24/7 supporting</h3>
+						<h3 class="subtitle">24/7 supporting</h3>
 						<p>
 							Shop with Confidence Anytime, Anywhere: Our Free Shipping Service Comes
 							with 24/7 Support to Ensure Your Packages Arrive Safely and On Time!
 						</p>
 					</div><div class="card">
 						<img src="img/email.png" alt="Іконка на якій зображено лист">
-						<h3>daily email</h3>
+						<h3 class="subtitle">daily email</h3>
 						<p>
 							Stay Up-to-Date with Your Deliveries: Enjoy the Convenience of Daily
 							Email Updates with Our Free Shipping Service, Making Your Online Shopping
@@ -234,7 +234,7 @@
 					<div class="card">
 						<img src="img/credit-card.png"
 							alt="Іконка на якій зображено кредитні картки">
-						<h3>easy payment</h3>
+						<h3 class="subtitle">easy payment</h3>
 						<p>
 							Shop and Pay with Ease: Our Free Shipping Service Not Only Delivers Your
 							Packages for Free, but Also Offers Easy Payment Options, Making Your
@@ -244,7 +244,7 @@
 					<div class="card">
 						<img src="img/badge.png"
 							alt="Іконка на якій зображено значок із відцотком">
-						<h3>monthly voucher</h3>
+						<h3 class="subtitle">monthly voucher</h3>
 						<p>
 							More Than Just Free Shipping: Our Service Rewards Your Loyalty with
 							Monthly Vouchers, Giving You More Reasons to Shop and Save on Your
