--- a/lesson_06/index.html
+++ b/lesson_06/index.html
@@ -260,14 +260,16 @@
 			</ul>
 
 			<section class="hero">
-				<div class="content">
-					<p class="subtitle">welcome to our</p>
-					<h1 class="title">funiture <span class="gallery">gallery</span></h1>
-					<div class="line"></div>
-					<p class="subtitle">browse our selections</p>
-					<p class="text">Featuring sleek designs and innovative materials that
-						seamlessly blend
-						form and function.</p>
+				<div class="wrapper">
+					<div class="content">
+						<p class="subtitle">welcome to our</p>
+						<h1 class="title">funiture <span class="gallery">gallery</span></h1>
+						<div class="line"></div>
+						<p class="subtitle">browse our selections</p>
+						<p class="text">Featuring sleek designs and innovative materials that
+							seamlessly blend
+							form and function.</p>
+					</div>
 				</div>
 			</section>
 		</main>
