--- a/lesson_06/index.html
+++ b/lesson_06/index.html
@@ -260,15 +260,18 @@
 			</ul>
 
 			<section class="hero">
-				<div class="wrapper">
+				<div class="container">
 					<div class="content">
 						<p class="subtitle">welcome to our</p>
-						<h1 class="title">funiture <span class="gallery">gallery</span></h1>
+						<h1 class="title">funiture <span>gallery</span></h1>
 						<div class="line"></div>
 						<p class="subtitle">browse our selections</p>
-						<p class="text">Featuring sleek designs and innovative materials that
-							seamlessly blend
-							form and function.</p>
+						<div class="text">
+							<p>Featuring sleek designs and innovative materials that
+								seamlessly blend
+								form and function.</p>
+
+						</div>
 					</div>
 				</div>
 			</section>
