--- a/lesson_08/index.html
+++ b/lesson_08/index.html
@@ -28,8 +28,14 @@
 						WEBP 3x / AVIF 1x, AVIF 2x, AVIF 3x</span>
 					<picture>
 						<source
-							srcset="img/elem-2.avif 1x, img/elem-2x2.avif 2x, img/elem-2x3.avif 3x">
-						<img src="img/elem-2.avif" alt="Декоративний елемент дизайну правий">
+							srcset="img/elem-2.avif 1x, img/elem-2x2.avif 2x, img/elem-2x3.avif 3x"
+							type="image/avif">
+						<source
+							srcset="img/elem-2.webp 1x, img/elem-2x2.webp 2x, img/elem-2x3.webp 3x"
+							type="image/webp">
+
+						<img src="img/elem-2.png"
+							alt="Декоративний елемент дизайну, на якому зображено ліву частину квітки">
 					</picture>
 				</div>
 			</div>
@@ -37,14 +43,30 @@
 			<div class="first-page">
 				<div class="container">
 					<div class="first-page__icon">
-						<button class="first-page__btn"></button>
-						<span>Icon, vector, SVG</span>
+						<picture>
+							<source
+								srcset="img/right-arrow.webp 1x, img/right-arrow-x2.webp 2x, img/right-arrow-x3.webp 3x"
+								type="image/webp">
+							<source
+								srcset="img/right-arrow.avif 1x, img/right-arrow-x2.avif 2x, img/right-arrow-x3.avif 3x"
+								type="image/avif">
+
+							<img src="img/right-arrow.png" alt="Іконка яка вказує напрямок - вправо">
+						</picture>
+						<span>Icon, bitmap, PNG 1x, PNG 2x, PNG 3x ~ WEBP 1x, WEBP 2x,
+							WEBP 3x / AVIF 1x, AVIF 2x, AVIF 3x</span>
 					</div>
 					<div class="first-page__right">
 						<picture>
 							<source
-								srcset="img/image-1.webp 1x, img/image-1x2.webp 2x, img/image-1x3.webp 3x">
-							<img src="img/image-1.webp" alt="Контентне зображення першої секції">
+								srcset="img/image-1.webp 1x, img/image-1x2.webp 2x, img/image-1x3.webp 3x"
+								type="image/webp">
+							<source
+								srcset="img/image-1.avif 1x, img/image-1x2.avif 2x, img/image-1x3.avif 3x"
+								type="image/avif">
+
+							<img src="img/image-1.jpg"
+								alt="На зображенні зображено жінку, яка робить розтяжку тіла">
 						</picture>
 						<span>Content, bitmap, JPG 1x, JPG 2x, JPG 3x ~ WEBP 1x, WEBP 2x, WEBP 3x
 							/ AVIF 1x, AVIF 2x, AVIF 3x</span>
@@ -56,8 +78,14 @@
 				<div class="container">
 					<picture>
 						<source
-							srcset="img/elem-1.avif 1x, img/elem-1x2.avif 2x, img/elem-1x3.avif 3x">
-						<img src="img/elem-1.avif" alt="Декоративний елемент дизайну лівий">
+							srcset="img/elem-1.avif 1x, img/elem-1x2.avif 2x, img/elem-1x3.avif 3x"
+							type="image/avif">
+						<source
+							srcset="img/elem-1.webp 1x, img/elem-1x2.webp 2x, img/elem-1x3.webp 3x"
+							type="image/webp">
+
+						<img src="img/elem-1.png"
+							alt="Декоративний елемент дизайну, на якому зображено праву частину квітки">
 					</picture>
 					<span>Element design, bitmap, PNG 1x, PNG 2x, PNG 3x ~ WEBP 1x, WEBP 2x,
 						WEBP 3x / AVIF 1x, AVIF 2x, AVIF 3x</span>
@@ -68,8 +96,14 @@
 				<div class="container">
 					<picture>
 						<source
-							srcset="img/image-2.webp 1x, img/image-2x2.webp 2x, img/image-2x3.webp 3x">
-						<img src="img/image-2.webp" alt="Контентне зображення другої секції">
+							srcset="img/image-2.avif 1x, img/image-2x2.avif 2x, img/image-2x3.avif 3x"
+							type="image/avif">
+						<source
+							srcset="img/image-2.webp 1x, img/image-2x2.webp 2x, img/image-2x3.webp 3x"
+							type="image/webp">
+
+						<img src="img/image-2.jpg"
+							alt="На зображенні зображено жінку, яка медитує">
 					</picture>
 					<span>Content, bitmap, JPG 1x, JPG 2x, JPG 3x ~ WEBP 1x, WEBP 2x, WEBP 3x /
 						AVIF 1x, AVIF 2x, AVIF 3x</span>
@@ -82,8 +116,14 @@
 						WEBP 3x / AVIF 1x, AVIF 2x, AVIF 3x</span>
 					<picture>
 						<source
-							srcset="img/elem-2.avif 1x, img/elem-2x2.avif 2x, img/elem-2x3.avif 3x">
-						<img src="img/elem-2.avif" alt="Декоративний елемент дизайну правий">
+							srcset="img/elem-2.webp 1x, img/elem-2x2.webp 2x, img/elem-2x3.webp 3x"
+							type="image/webp">
+						<source
+							srcset="img/elem-2.avif 1x, img/elem-2x2.avif 2x, img/elem-2x3.avif 3x"
+							type="image/avif">
+
+						<img src="img/elem-2.png"
+							alt="Декоративний елемент дизайну, на якому зображено ліву частину квітки">
 					</picture>
 				</div>
 			</div>
@@ -93,9 +133,14 @@
 					<div class="third-page__one-img">
 						<picture>
 							<source
-								srcset="img/our-lessons-1.avif 1x, img/our-lessons-1x2.avif 2x, img/our-lessons-1x3.avif 3x">
-							<img src="img/our-lessons-1.avif"
-								alt="Перше контентне зображення третьої секції">
+								srcset="img/our-lessons-1.avif 1x, img/our-lessons-1x2.avif 2x, img/our-lessons-1x3.avif 3x"
+								type="image/avif">
+							<source
+								srcset="img/our-lessons-1.webp 1x, img/our-lessons-1x2.webp 2x, img/our-lessons-1x3.webp 3x"
+								type="image/webp">
+
+							<img src="img/our-lessons-1.jpg"
+								alt="На зображенні зображено жінку, яка робить розтяжку руки ліворуч">
 						</picture>
 						<span>Content, bitmap, JPG 1x, JPG 2x, JPG 3x ~ AVIF 1x, AVIF 2x, AVIF 3x
 							/ WEBP 1x, WEBP 2x, WEBP 3x</span>
@@ -103,9 +148,14 @@
 					<div class="third-page__two-img">
 						<picture>
 							<source
-								srcset="img/our-lessons-2.avif 1x, img/our-lessons-2x2.avif 2x, img/our-lessons-2x3.avif 3x">
-							<img src="img/our-lessons-2.avif"
-								alt="Друге контентне зображення третьої секції">
+								srcset="img/our-lessons-2.avif 1x, img/our-lessons-2x2.avif 2x, img/our-lessons-2x3.avif 3x"
+								type="image/avif">
+							<source
+								srcset="img/our-lessons-2.webp 1x, img/our-lessons-2x2.webp 2x, img/our-lessons-2x3.webp 3x"
+								type="image/webp">
+
+							<img src="img/our-lessons-2.jpg"
+								alt="На зображенні зображено жінку, яка робить випад із розтяжкою назад">
 						</picture>
 						<span>Content, bitmap, JPG 1x, JPG 2x, JPG 3x ~ AVIF 1x, AVIF 2x, AVIF 3x
 							/ WEBP 1x, WEBP 2x, WEBP 3x</span>
@@ -113,9 +163,14 @@
 					<div class="third-page__third-img">
 						<picture>
 							<source
-								srcset="img/our-lessons-3.avif 1x, img/our-lessons-3x2.avif 2x, img/our-lessons-3x3.avif 3x">
-							<img src="img/our-lessons-3.avif"
-								alt="Третє контентне зображення третьої секції">
+								srcset="img/our-lessons-3.avif 1x, img/our-lessons-3x2.avif 2x, img/our-lessons-3x3.avif 3x"
+								type="image/avif">
+							<source
+								srcset="img/our-lessons-3.webp 1x, img/our-lessons-3x2.webp 2x, img/our-lessons-3x3.webp 3x"
+								type="image/webp">
+
+							<img src="img/our-lessons-3.jpg"
+								alt="На зображенні зображено жінку, яка робить випад на коліні із розтяжкою назад">
 						</picture>
 						<span>Content, bitmap, JPG 1x, JPG 2x, JPG 3x ~ AVIF 1x, AVIF 2x, AVIF 3x
 							/ WEBP 1x, WEBP 2x, WEBP 3x</span>
