--- a/lesson_09/index.html
+++ b/lesson_09/index.html
@@ -21,26 +21,24 @@
 					<img src="#" alt="Logo site">
 				</div>
 				<div class="header__search"></div>
-				<div class="header__left">
-					<nav class="nav-menu menu">
-						<ul class="menu__list list-menu">
-							<li class="list-menu__item">
-								<a href="#" class="list-menu__link">home</a>
-							</li>
-							<li class="list-menu__item">
-								<a href="#" class="list-menu__link">shop</a>
-							</li>
-							<li class="list-menu__item">
-								<a href="#" class="list-menu__link">blog</a>
-							</li>
-							<li class="list-menu__item">
-								<a href="#" class="list-menu__link">about us</a>
-							</li>
-						</ul>
-					</nav>
-				</div>
+				<nav class="header__menu menu">
+					<ul class="menu__list list-menu">
+						<li class="list-menu__item">
+							<a href="#" class="list-menu__link">home</a>
+						</li>
+						<li class="list-menu__item">
+							<a href="#" class="list-menu__link">shop</a>
+						</li>
+						<li class="list-menu__item">
+							<a href="#" class="list-menu__link">blog</a>
+						</li>
+						<li class="list-menu__item">
+							<a href="#" class="list-menu__link">about us</a>
+						</li>
+					</ul>
+				</nav>
 
-				<div class="header__right">
+				<div class="header__action">
 					<ul class="list-tabs">
 						<li class="list-tab">
 							<a href="#" class="list-tab__link">love</a>
@@ -56,10 +54,9 @@
 			<div class="hero-section">
 				<div class="hero-section__container">
 					<div class="hero-section__content">
-						<h2 class="hero-section__label">welcome to our</h2>
-						<div class="hero-section__title">furnityre<span>gallery</span></div>
-						<div class="hero-section__line"></div>
-						<h2 class="hero-section__label">browse our seelctions</h2>
+						<div class="hero-section__label">welcome to our</div>
+						<h1 class="hero-section__title">furnityre<span>gallery</span></h1>
+						<div class="hero-section__label">browse our seelctions</div>
 						<div class="hero-section__text">
 							<p>
 								Featuring sleek designs and innovative materials that seamlessly blend
@@ -69,90 +66,90 @@
 					</div>
 				</div>
 			</div>
-			<div class="categories-section">
-				<div class="categories-section__container">
-					<div class="categories-section__block1">
+			<div class="categories">
+				<div class="categories__container">
+					<div class="categories__block1">
 						<img src="#" alt="Hanging light">
-						<div class="categories-section__content">
-							<div class="categories-section__label">hanging light</div>
-							<div class="categories-section__text">
+						<div class="categories__content">
+							<div class="categories__label">hanging light</div>
+							<div class="categories__text">
 								<p>
 									Upgrade your space with our modern hanging light, featuring sleek
 									lines, energy-efficient LED lighting, and adjustable height.
 								</p>
 							</div>
-							<a href="#" class="categories-section__link">view more</a>
+							<a href="#" class="categories__link">view more</a>
 						</div>
 					</div>
-					<div class="categories-section__block2">
-						<div class="categories-section__content">
-							<div class="categories-section__label">designed sofa</div>
-							<div class="categories-section__text">
+					<div class="categories__block2">
+						<div class="categories__content">
+							<div class="categories__label">designed sofa</div>
+							<div class="categories__text">
 								<p>
 									Introducing our newest sofa, the perfect combination of style and
 									comfort, designed to elevate your living space and provide ultimate
 									relaxation.
 								</p>
 							</div>
-							<a href="#" class="categories-section__link">view more</a>
+							<a href="#" class="categories__link">view more</a>
 							<img src="#" alt="Green sofa">
 						</div>
 					</div>
 					<div
-						class="categories-section__block1 categories-section__block1--reverse">
+						class="categories__block1 categories__block1--reverse">
 						<img src="#" alt="Nova chair">
-						<div class="categories-section__content">
-							<div class="categories-section__label">hanging light</div>
-							<div class="categories-section__text">
+						<div class="categories__content">
+							<div class="categories__label">hanging light</div>
+							<div class="categories__text">
 								<p>
 									Upgrade your space with our modern hanging light, featuring sleek
 									lines, energy-efficient LED lighting, and adjustable height.
 								</p>
 							</div>
-							<a href="#" class="categories-section__link">view more</a>
+							<a href="#" class="categories__link">view more</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<section class="trusted-by-section">
-				<div class="trusted-by-section__container">
-					<h2 class="trusted-by-section__title">trusted by</h2>
-					<ul class="trusted-by-section__list list-trusted-by-section">
-						<li class="list-trusted-by-section__item">
+			<section class="trusted-by">
+				<div class="trusted-by__container">
+					<h2 class="trusted-by__title">trusted by</h2>
+					<ul class="trusted-by__list list-trusted-by">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Aspen online">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Crop and Highlight">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="N">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Miiissy">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Peppermint">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Pixel labs">
 						</li>
 
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="N">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Pixel labs">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Peppermint">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Miiissy">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Aspen online">
 						</li>
-						<li class="list-trusted-by-section__item">
+						<li class="list-trusted-by__item">
 							<img src="#" alt="Crop and Highlight">
 						</li>
 					</ul>
