--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -80,48 +80,54 @@
 						<h2 class="section-face__title">Face</h2>
 						<ul class="section-face__list">
 							<li class="section-face__item">
-								<!-- <div class="bg-block"></div> -->
-								<picture>
-									<source
-										srcset="img/content/cleanser.avif 1x, img/content/cleanser-x2.avif 2x, img/content/cleanser-x3.avif 3x"
-										type="image/avif">
-									<source
-										srcset="img/content/cleanser.webp 1x, img/content/cleanser-x2.webp 2x, img/content/cleanser-x3.webp 3x"
-										type="image/webp">
-									<img src="img/content/cleanser.jpg"
-										alt="A woman applying cleansers to her face">
-								</picture>
-								<h3 class="section-face__label">Cleansers</h3>
-								<a href="#" class="section-face__link">More</a>
+								<a href="#">
+									<!-- <div class="bg-block"></div> -->
+									<picture>
+										<source
+											srcset="img/content/cleanser.avif 1x, img/content/cleanser-x2.avif 2x, img/content/cleanser-x3.avif 3x"
+											type="image/avif">
+										<source
+											srcset="img/content/cleanser.webp 1x, img/content/cleanser-x2.webp 2x, img/content/cleanser-x3.webp 3x"
+											type="image/webp">
+										<img src="img/content/cleanser.jpg"
+											alt="A woman applying cleansers to her face">
+									</picture>
+									<h3 class="section-face__label">Cleansers</h3>
+									<button class="section-face__btn">More</button>
+								</a>
 							</li>
 							<li class="section-face__item">
-								<!-- <div class="bg-block"></div> -->
-								<picture>
-									<source
-										srcset="img/content/eye-patches.avif 1x, img/content/eye-patches-x2.avif 2x, img/content/eye-patches-x3.avif 3x"
-										type="image/avif">
-									<source
-										srcset="img/content/eye-patches.webp 1x, img/content/eye-patches-x2.webp 2x, img/content/eye-patches-x3.webp 3x"
-										type="image/webp">
-									<img src="img/content/eye-patches.jpg"
-										alt="Woman who used eye patches">
-								</picture>
-								<h3 class="section-face__label">Eye Patches</h3>
-								<a href="#" class="section-face__link">More</a>
+								<a href="#">
+									<!-- <div class="bg-block"></div> -->
+									<picture>
+										<source
+											srcset="img/content/eye-patches.avif 1x, img/content/eye-patches-x2.avif 2x, img/content/eye-patches-x3.avif 3x"
+											type="image/avif">
+										<source
+											srcset="img/content/eye-patches.webp 1x, img/content/eye-patches-x2.webp 2x, img/content/eye-patches-x3.webp 3x"
+											type="image/webp">
+										<img src="img/content/eye-patches.jpg"
+											alt="Woman who used eye patches">
+									</picture>
+									<h3 class="section-face__label">Eye Patches</h3>
+									<button class="section-face__btn">More</button>
+								</a>
 							</li>
 							<li class="section-face__item">
-								<!-- <div class="bg-block"></div> -->
-								<picture>
-									<source
-										srcset="img/content/mask.avif 1x, img/content/mask-x2.avif 2x, img/content/mask-x3.avif 3x"
-										type="image/avif">
-									<source
-										srcset="img/content/mask.webp 1x, img/content/mask-x2.webp 2x, img/content/mask-x3.webp 3x"
-										type="image/webp">
-									<img src="img/content/mask.jpg" alt="Woman using a face mask">
-								</picture>
-								<h3 class="section-face__label">Мasks</h3>
-								<a href="#" class="section-face__link">More</a>
+								<a href="#">
+									<!-- <div class="bg-block"></div> -->
+									<picture>
+										<source
+											srcset="img/content/mask.avif 1x, img/content/mask-x2.avif 2x, img/content/mask-x3.avif 3x"
+											type="image/avif">
+										<source
+											srcset="img/content/mask.webp 1x, img/content/mask-x2.webp 2x, img/content/mask-x3.webp 3x"
+											type="image/webp">
+										<img src="img/content/mask.jpg" alt="Woman using a face mask">
+									</picture>
+									<h3 class="section-face__label">Мasks</h3>
+									<button class="section-face__btn">More</button>
+								</a>
 							</li>
 						</ul>
 						<a href="#" class="section-face__button">More</a>
