--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -27,7 +27,7 @@
 						<h2 class="featured-products__title">featured&nbsp;products</h2>
 						<ul class="featured-products__tabs-list list-tabs">
 							<li class="list-tabs__item">
-								<a href="#" class="list-tabs__link">all</a>
+								<a href="#" class="list-tabs__link list-tabs__link--active">all</a>
 							</li>
 							<li class="list-tabs__item">
 								<a href="#" class="list-tabs__link">on&nbsp;sale</a>
