--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -202,13 +202,14 @@
 							</div>
 
 							<div class="section-login__banner banner">
-								<div class="banner__sale">
-									<span class="banner__hot">hot</span>
-									<div class="banner__text">
-										<p>discount 25% for new member</p>
+								<div class="banner__body">
+									<div class="banner__sale">
+										<div class="banner__label">hot</div>
+										<div class="banner__text">
+											<p>discount<br>25% for<br>new<br>member</p>
+										</div>
 									</div>
 								</div>
-
 								<picture>
 									<source
 										srcset="img/banner-1x.webp 1x, img/banner-2x.webp 2x, img/banner-3x.webp 3x"
